--- a/style.css
+++ b/style.css
@@ -21,3 +21,49 @@
     border-radius: 8px;
     padding: 9px 25px;
 }
+.cat1, .cat2, .cat3{
+    border-radius:10px;
+}
+.cat1{
+ background-color: orange;
+ padding:10px 30px;
+}
+
+.cat2{
+background-color:orchid;
+padding:10px 30px;
+}
+
+.cat3{
+background-color: blue;
+padding:10px 30px;
+}
+
+.categories h1{
+ color:#ffff;
+}
+.categories img{
+    width:100px;
+}
+
+.card{
+    border:none;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px lightgray;
+   
+}
+.card-footer{
+    background-color: white;
+    border-top:none;
+}
+
+#subscribe{
+    height:300px;
+}
+
+#buttonfoot{
+    margin-left:100px;
+}
+footer{
+    text-align:center;
+}
